samples/_failures_safe/1761327762_f3bffc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e91ef23.c: In function ‘main’:
./samples/SAFE/__tmp_2e91ef23.c:170:9: error: expected expression at end of input
  170 |         int result =
      |         ^~~
./samples/SAFE/__tmp_2e91ef23.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e91ef23.c:170:9: error: expected declaration or statement at end of input
